--- a/modal.html
+++ b/modal.html
@@ -1,31 +1,49 @@
 ﻿<div id="dialog" class="window">
-	<form id="modal">
+	<form id="modal" action="/Meruert/themes/main-test/now.php" method="post">
 		<div class="modal-elem">
-		<label for="background-color">
-			Цвет фона:
-		</label>
-		<input name="background-color" type="text">
+			<label for="background-color">
+				Цвет фона:
+			</label>
+			<input name="background-color" type="text">
+		</div>
+		<!--<div class="modal-elem">
+			<label for="height">
+				Высота блока(*% или *px):
+			</label>
+			<input name="height" type="text">
 		</div>
 		<div class="modal-elem">
-		<label for="height">
-			Высота блока(*% или *px):
-		</label>
-		<input name="height" type="text">
+			<label for="width">
+				Ширина блока (*% или *px):
+			</label>
+			<input name="width" type="text">
 		</div>
 		<div class="modal-elem">
-		<label for="width">
-			Ширина блока (*% или *px):
-		</label>
-		<input name="width" type="text">
+			<label for="background-color">
+				Радиус закругления:
+			</label>
+			<input name="background-color" type="text">
 		</div>
 		<div class="modal-elem">
-		<label for="bg">
-			Фоновое изображение:
-		</label>
-		<input type="file" name="bg">
+			<label for="font-style">
+				Шрифт:
+			</label>
+			<input type="text" name="font-style">
 		</div>
-		<div class="modal-elem" id="closebtn">
-			<input type="button" href="#" value="Close" name="close">
+		<div class="modal-elem">
+			<label for="text-color">
+				Цвет текста:
+			</label>
+			<input name="text-color" type="text">
+		</div>
+			<div class="modal-elem">
+			<label for="bg">
+				Фоновое изображение:
+			</label>
+			<input type="file" name="bg">
+			</div> -->
+			<div class="modal-elem" id="applybtn">
+				<input type="submit" value="Apply" name="apply">
 		</div>
 		<!--<div class="d-login"><input type="image" alt="Login" title="Login" src="images/login-button.png"/></div>-->
 	</form>
