--- a/modal.html
+++ b/modal.html
@@ -1,10 +1,10 @@
 ﻿<div id="dialog" class="window">
-	<form id="modal" action="/Meruert/themes/main-test/now.php" method="post">
+	<form id="modal"> <!--method="post">-->
 		<div class="modal-elem">
 			<label for="background-color">
 				Цвет фона:
 			</label>
-			<input name="background-color" type="text">
+			<input name="background-color" type="text" id="colorinput">
 		</div>
 		<!--<div class="modal-elem">
 			<label for="height">
@@ -43,7 +43,7 @@
 			<input type="file" name="bg">
 			</div> -->
 			<div class="modal-elem" id="applybtn">
-				<input type="submit" value="Apply" name="apply">
+				<input type="submit" value="Apply">
 		</div>
 		<!--<div class="d-login"><input type="image" alt="Login" title="Login" src="images/login-button.png"/></div>-->
 	</form>
