--- a/modal.html
+++ b/modal.html
@@ -10,7 +10,7 @@
 			<label for="height">
 				Высота блока:
 			</label>
-			<input name="height" type="text" id="heihgtinput">
+			<input name="height" type="text" id="heightinput">
 		</div>
 		<div class="modal-elem">
 			<label for="width">
@@ -19,10 +19,10 @@
 			<input name="width" type="text" id="widthinput">
 		</div>
 		<div class="modal-elem">
-			<label for="background-color">
+			<label for="border-radius">
 				Радиус закругления углов:
 			</label>
-			<input name="background-color" type="text" id="radiusinput">
+			<input name="border-radius" type="text" id="radiusinput">
 		</div>
 		<div class="modal-elem">
 			<label for="font-style">
@@ -37,10 +37,10 @@
 			<input type="text" name="font-size" id="keglinput">
 		</div>
 		<div class="modal-elem">
-			<label for="text-color">
+			<label for="color">
 				Цвет текста:
 			</label>
-			<input name="text-color" type="text" id="textcolorinput">
+			<input name="color" type="text" id="textcolorinput">
 		</div> 
 			<div id="applybtn">
 				<input type="button" value="Apply">
