php don't works

--- a/modal.html
+++ b/modal.html
@@ -18,17 +18,23 @@
 			</label>
 			<input name="width" type="text" id="widthinput">
 		</div>
-		<div class="modal-elem">
+		<!--<div class="modal-elem">
 			<label for="border-radius">
 				Радиус закругления углов:
 			</label>
 			<input name="border-radius" type="text" id="radiusinput">
-		</div>
+		</div>-->
 		<div class="modal-elem">
 			<label for="font-style">
-				Гарнитура:
+				Начертание:
 			</label>
 			<input type="text" name="font-style" id="garnitinput">
+		</div>
+		<div class="modal-elem">
+			<label for="font-family">
+				Гарнитура:
+			</label>
+			<input type="text" name="font-family" id="familyinput">
 		</div>
 		<div class="modal-elem">
 			<label for="font-size">
@@ -42,8 +48,9 @@
 			</label>
 			<input name="color" type="text" id="textcolorinput">
 		</div> 
-			<div id="applybtn">
-				<input type="button" value="Apply">
+		<div>
+				<p><input id="applybtn" type="button" value="Применить">
+				<input id="closeModalBtn" type="button" value="Закрыть"></p>
 		</div>
 	</form>
 </div>
