--- a/modal.html
+++ b/modal.html
@@ -1,5 +1,5 @@
 ﻿<div id="editModuleDialog" class="editModuleWindow">
-	<form id="modal"> <!--method="post">-->
+	<form id="modal">
 		<div class="modal-elem">
 			<label for="background-color">
 				Цвет фона:
